2009-06-26  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=25529
        [Gtk] Expected states not exposed to assistive technologies

        Add support for VISIBLE, EDITABLE and SENSITIVE states.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (setAtkStateSetFromCoreObject):

Canonical link: https://commits.webkit.org/36940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45252 268f45cc-cd09-0410-ab3c-d52691b4dbfc